--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="text_goods_sell_count">%1$d人已经购买</string>
     <string name="text_getTaokouling">领取淘口令!</string>
     <string name="text_loading">玩命加载中...</string>
+    <string name="text_selected_title">精选宝贝</string>
 
 
 </resources>
