添加特惠界面,实现下拉刷新加载更多

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="text_getTaokouling">领取淘口令!</string>
     <string name="text_loading">玩命加载中...</string>
     <string name="text_selected_title">精选宝贝</string>
+    <string name="text_onsell_title">特惠宝贝</string>
 
 
 </resources>
