集成了百度识图SDK,简单的登录注册功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="text_onsell_title">特惠宝贝</string>
     <string name="text_search_history">搜索历史记录:</string>
     <string name="text_serarch_recommend">热门搜索</string>
+    <string name="text_myinfo">我的</string>
 
 
 </resources>
