--- a/facelibs/src/main/res/values-zh/strings.xml
+++ b/facelibs/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!--app名称-->
-    <string name="app_name">ArcFaceDemo</string>
+    <string name="app_name">淘宝领券</string>
 
     <!--配置、功能选择界面-->
     <string name="page_preview">人脸属性检测（视频）</string>
